2009-11-18  Ben Murdoch  <benm@google.com>

        Reviewed by Darin Adler.

        HTMLAnchorElement is inconsistent with its internal handling of the value returned for the href attribute.
        https://bugs.webkit.org/show_bug.cgi?id=31593

        * fast/dom/HTMLAnchorElement/script-tests/set-href-attribute-whitespace.js: Added.
        * fast/dom/HTMLAnchorElement/set-href-attribute-whitespace-expected.txt: Added.
        * fast/dom/HTMLAnchorElement/set-href-attribute-whitespace.html: Added.

2009-11-18  Alexey Proskuryakov  <ap@apple.com>

        Trying to enable WebSocket tests on Tiger again, now that bug 31603 is fixed.

        * platform/mac-tiger/Skipped:

2009-11-18  Martin Robinson  <martin.james.robinson@gmail.com>

        Reviewed by Gustavo Noronha.

        [GTK] Tab key does not cycle through elements by default
        https://bugs.webkit.org/show_bug.cgi?id=31505

        Improve fast/events/keypress-insert-tab.html to test that the
        TabKeyCyclesThroughElements setting is true by default and
        toggles correctly.

        * fast/events/keypress-insert-tab.html:

2009-11-18  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] WebKit crashes when loading certain SVG images

        Added a test for a crash of QtWebkit when loading SVG images.

        https://bugs.webkit.org/show_bug.cgi?id=29443

        * svg/text/resources/text-font-invalid.svg: Added.
        * svg/text/text-font-invalid-expected.txt: Added.
        * svg/text/text-font-invalid.html: Added.

2009-11-17  Hayato Ito  <hayato@google.com>

        Reviewed by Darin Adler.

        Avoid infinite mutual recursion when deeply nested tags are loaded
        https://bugs.webkit.org/show_bug.cgi?id=30651

        * fast/parser/block-nesting-cap-table-expected.txt: Added.
        * fast/parser/block-nesting-cap-table.html: Added.
        * fast/parser/script-tests/block-nesting-cap-table.js: Added.
